--- a/.github/workflows/build-&-push.yaml
+++ b/.github/workflows/build-&-push.yaml
@@ -2,7 +2,7 @@ name: Docker Image Publish
 
 on:
   push:
-    branches: ['main', 'master', 'stage', 'dev']
+    branches: ['main']
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
 
